corrected image overlap issue, added centering to style.css, added new game button to index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,9 @@ body {
 }
 
 #left {
-    padding-left: 25%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .newFont {
